# personal-semgrep-server

./: .gitmodules  Cargo.toml  README.md  index.html  logging.yaml
.github/workflows/: release.yaml  upload.yaml
src/: constants.rs  diag.rs  main.rs  ruleset.rs  server.rs  template.rs
src/data/: index.html
tests/cpp/: arrays-out-of-bounds-access.cpp  arrays-out-of-bounds-access.md  arrays-out-of-bounds-access.yaml  arrays-passed-to-functions.cpp  arrays-passed-to-functions.md  encode-decode-function-name.cpp  encode-decode-function-name.md  encode-decode-function-name.yaml  encrypt-decrypt-function-name.cpp  encrypt-decrypt-function-name.md  memcpy-insecure-use.cpp  memcpy-insecure-use.md  memcpy-insecure-use.yaml  potentially-uninitialized-pointer.cpp  potentially-uninitialized-pointer.md  snprintf-insecure-use.cpp  snprintf-insecure-use.md  snprintf-insecure-use.yaml
tests/policies/: policy1.yaml  policy2.yaml  policy3.yaml
tests/rules/cpp/: arrays-passed-to-functions.yaml  encode-decode-function-name.yaml  encrypt-decrypt-function-name.yaml  potentially-uninitialized-pointer.yaml
tests/rulesets/: set1.yaml  set2.yaml
